<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:id="@+id/video_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/img_video"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center" />

                <TextView
                    android:id="@+id/video_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#000"
                    android:gravity="bottom|right"
                    android:padding="2dp"
                    android:text="@string/_00_13"
                    android:textColor="#ffffff"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_name_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:text="@string/name"
                android:textColor="#0b0b0b"
                android:textSize="14sp"
                android:textStyle="normal"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/video_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:text="@string/path"
                android:textColor="#706d6d"
                android:textSize="@dimen/_11sp"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/video_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/size"
                    android:textColor="#6e6c6c"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/video_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:singleLine="true"
                    android:text="@string/date"
                    android:textColor="#414040"
                    android:textSize="@dimen/_10sp"
                    android:layout_marginEnd="2dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>